2005-04-21  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/httptime.c: fixed usage of non-mt-safe timegm()
	by adding a protective lock (Bug#  1187635).

2005-04-17  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/conn.c: removed "ns_conn flush" option added 
	recently since not needed. The trick is done with 
	the "ns_headers" command.

2005-04-18  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/nsd.h:
	* nsd/tclcmds.c:
	* nsd/tclresp.c:
	* tests/tclresp.test: Remove support for connid parameter to tcl
	response commands. (RFE #1156107)

	* nsd/conn.c:
	* tests/ns_conn_host.test: Prevent truncation of content already in
	dstring when location is appended.  Use nstest_http in tests.

	* nsd/nsconf.c:
	* tests/test.nscfg:
	* tests/testserver/modules/http.tcl: Add helper command
	nstest_http for test suite and new config parameter
	ns/parameters/tcllibrary so that the tcl shared library can be set
	to an arbitrary path.

2005-04-17  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* tests/ns_nsv.test: added new file.
	Credits to Bernd (b.eidenschink@kinetiqa.de).

2005-04-17  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/conn.c: ns_conn status was wrongly returning the
	changed status code instead of the previous value.
	This was introduced (again) by the changes below.

2005-04-16  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/nsmain.c: removed extra colon in variable declaration
	which caused some older gcc compilers to break.

	* nsd/conn.c: added "ns_conn flush" as per RFE #1184271
	and untabified and reidented the file (eh, old nit-picker)

2005-04-11  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/info.c:
	* nsd/proc.c:
	* nsd/return.c:
	* nsd/server.c:
	* nsd/fastpath.c:
	* nsd/pathname.c: New concept: server root. Callback can be
	registered to create the server root, defaults to statically
	assigned 'serverroot' from config, or host-based if enabled.
	Many virtual hosting options added. (RFE #1159471)